# C_server

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build.sh  client.cpp  configure.sh  run_server.sh  server.cpp  test_run.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainers/: Dockerfile
.github/workflows/: test.yml
